Improved appointment section heading and added subtitle

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,6 +63,7 @@
       <!-- Appointment Booking Form Section (Hidden until login/signup) -->
       <div id="appointmentSection" style="display: none">
         <h2>Book an Appointment</h2>
+        <p style="color: gray; font-size: 14px;">Easily schedule your doctor visit online</p>
         <form id="appointmentForm">
           <!-- Name -->
           <label for="name">Name:</label>
